--- a/Clasificacion_binaria/ConsoleAppML1/ConsoleAppML1ML.ConsoleApp/ConsoleAppML1ML.ConsoleApp.csproj
+++ b/Clasificacion_binaria/ConsoleAppML1/ConsoleAppML1ML.ConsoleApp/ConsoleAppML1ML.ConsoleApp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview" />
+    <PackageReference Include="Microsoft.ML.AutoML" Version="0.16.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleAppML1ML.Model\ConsoleAppML1ML.Model.csproj" />
