--- a/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
+++ b/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview" />
     <PackageReference Include="Microsoft.ML.LightGBM" Version="1.5.0-preview" />
+    <PackageReference Include="Microsoft.ML.AutoML" Version="0.16.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleAppML2ML.Model\ConsoleAppML2ML.Model.csproj" />
