--- a/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
+++ b/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview" />
     <PackageReference Include="Microsoft.ML.LightGBM" Version="1.5.0-preview" />
     <PackageReference Include="Microsoft.ML.AutoML" Version="0.16.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleAppML2ML.Model\ConsoleAppML2ML.Model.csproj" />
