--- a/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
+++ b/Clasificacion_multiclase/ConsoleAppML2/ConsoleAppML2ML.ConsoleApp/ConsoleAppML2ML.ConsoleApp.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="1.5.0-preview" />
-    <PackageReference Include="Microsoft.ML.LightGBM" Version="1.5.0-preview" />
-    <PackageReference Include="Microsoft.ML.AutoML" Version="0.16.0" />
+    <PackageReference Include="Microsoft.ML" Version="1.5.0" />
+    <PackageReference Include="Microsoft.ML.LightGBM" Version="1.5.0" />
+    <PackageReference Include="Microsoft.ML.AutoML" Version="0.17.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
   <ItemGroup>
